# internal/generated/api/v1/service.pb.go
@@ -5,9 +5,8 @@ package v1
 
 import (
 	fmt "fmt"
-	math "math"
-
 	proto "github.com/golang/protobuf/proto"
+	math "math"
 )
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -22,9 +21,12 @@ var _ = math.Inf
 const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 
 type Tablo struct {
-	Id                   string    `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Id                   *URI      `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
 	Title                string    `protobuf:"bytes,2,opt,name=title,proto3" json:"title,omitempty"`
-	Columns              []*Column `protobuf:"bytes,3,rep,name=columns,proto3" json:"columns,omitempty"`
+	Emoji                string    `protobuf:"bytes,3,opt,name=emoji,proto3" json:"emoji,omitempty"`
+	Desc                 string    `protobuf:"bytes,4,opt,name=desc,proto3" json:"desc,omitempty"`
+	Columns              []*Column `protobuf:"bytes,5,rep,name=columns,proto3" json:"columns,omitempty"`
+	Sources              []*Source `protobuf:"bytes,6,rep,name=sources,proto3" json:"sources,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}  `json:"-"`
 	XXX_unrecognized     []byte    `json:"-"`
 	XXX_sizecache        int32     `json:"-"`
@@ -55,16 +57,30 @@ func (m *Tablo) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_Tablo proto.InternalMessageInfo
 
-func (m *Tablo) GetId() string {
+func (m *Tablo) GetId() *URI {
 	if m != nil {
 		return m.Id
 	}
-	return ""
+	return nil
 }
 
 func (m *Tablo) GetTitle() string {
 	if m != nil {
 		return m.Title
+	}
+	return ""
+}
+
+func (m *Tablo) GetEmoji() string {
+	if m != nil {
+		return m.Emoji
+	}
+	return ""
+}
+
+func (m *Tablo) GetDesc() string {
+	if m != nil {
+		return m.Desc
 	}
 	return ""
 }
@@ -76,10 +92,19 @@ func (m *Tablo) GetColumns() []*Column {
 	return nil
 }
 
+func (m *Tablo) GetSources() []*Source {
+	if m != nil {
+		return m.Sources
+	}
+	return nil
+}
+
 type Column struct {
-	Id                   string   `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Id                   *URI     `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
 	Title                string   `protobuf:"bytes,2,opt,name=title,proto3" json:"title,omitempty"`
-	Cards                []*Card  `protobuf:"bytes,3,rep,name=cards,proto3" json:"cards,omitempty"`
+	Emoji                string   `protobuf:"bytes,3,opt,name=emoji,proto3" json:"emoji,omitempty"`
+	Desc                 string   `protobuf:"bytes,4,opt,name=desc,proto3" json:"desc,omitempty"`
+	Cards                []*Card  `protobuf:"bytes,5,rep,name=cards,proto3" json:"cards,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -110,16 +135,30 @@ func (m *Column) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_Column proto.InternalMessageInfo
 
-func (m *Column) GetId() string {
+func (m *Column) GetId() *URI {
 	if m != nil {
 		return m.Id
 	}
-	return ""
+	return nil
 }
 
 func (m *Column) GetTitle() string {
 	if m != nil {
 		return m.Title
+	}
+	return ""
+}
+
+func (m *Column) GetEmoji() string {
+	if m != nil {
+		return m.Emoji
+	}
+	return ""
+}
+
+func (m *Column) GetDesc() string {
+	if m != nil {
+		return m.Desc
 	}
 	return ""
 }
@@ -132,10 +171,11 @@ func (m *Column) GetCards() []*Card {
 }
 
 type Card struct {
-	Id                   string   `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Id                   *URI     `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
 	Title                string   `protobuf:"bytes,2,opt,name=title,proto3" json:"title,omitempty"`
-	Url                  string   `protobuf:"bytes,3,opt,name=url,proto3" json:"url,omitempty"`
-	Labels               []string `protobuf:"bytes,4,rep,name=labels,proto3" json:"labels,omitempty"`
+	Emoji                string   `protobuf:"bytes,3,opt,name=emoji,proto3" json:"emoji,omitempty"`
+	Url                  string   `protobuf:"bytes,4,opt,name=url,proto3" json:"url,omitempty"`
+	Labels               []string `protobuf:"bytes,5,rep,name=labels,proto3" json:"labels,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -166,16 +206,23 @@ func (m *Card) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_Card proto.InternalMessageInfo
 
-func (m *Card) GetId() string {
+func (m *Card) GetId() *URI {
 	if m != nil {
 		return m.Id
 	}
-	return ""
+	return nil
 }
 
 func (m *Card) GetTitle() string {
 	if m != nil {
 		return m.Title
+	}
+	return ""
+}
+
+func (m *Card) GetEmoji() string {
+	if m != nil {
+		return m.Emoji
 	}
 	return ""
 }
@@ -275,24 +322,31 @@ func init() {
 func init() { proto.RegisterFile("v1/service.proto", fileDescriptor_d3e34d69331f2f1a) }
 
 var fileDescriptor_d3e34d69331f2f1a = []byte{
-	// 297 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x52, 0xcf, 0x4f, 0x83, 0x30,
-	0x18, 0x0d, 0x14, 0x98, 0xfb, 0x34, 0xba, 0x34, 0x8b, 0xa9, 0x68, 0x0c, 0xe1, 0xc4, 0xa9, 0xc8,
-	0x4c, 0xf4, 0xe4, 0xc5, 0x69, 0x16, 0x13, 0x4f, 0xf8, 0xe3, 0xe0, 0xc9, 0x02, 0x3d, 0x34, 0x29,
-	0xeb, 0x52, 0x3a, 0xfe, 0x12, 0xff, 0x60, 0x43, 0xd9, 0x6e, 0xb0, 0xec, 0xd6, 0xf7, 0xfa, 0xbe,
-	0xef, 0xbd, 0xbc, 0x16, 0x66, 0x6d, 0x96, 0x36, 0x5c, 0xb7, 0xa2, 0xe4, 0x74, 0xa3, 0x95, 0x51,
-	0x78, 0xae, 0x4a, 0xa3, 0x24, 0x2b, 0x28, 0xdb, 0x08, 0x6a, 0x58, 0x21, 0x15, 0x6d, 0xb3, 0xf0,
-	0xa2, 0xcd, 0xd2, 0x52, 0xd5, 0xb5, 0x5a, 0xf7, 0xb2, 0x98, 0x83, 0xff, 0xd9, 0x5d, 0xe2, 0x73,
-	0x70, 0x45, 0x45, 0x9c, 0xc8, 0x49, 0xa6, 0xb9, 0x2b, 0x2a, 0x3c, 0x07, 0xdf, 0x08, 0x23, 0x39,
-	0x71, 0x2d, 0xd5, 0x03, 0xfc, 0x00, 0x93, 0x52, 0xc9, 0x6d, 0xbd, 0x6e, 0x08, 0x8a, 0x50, 0x72,
-	0xba, 0xb8, 0xa1, 0x43, 0x3e, 0x74, 0x69, 0x45, 0xf9, 0x5e, 0x1c, 0xff, 0x42, 0xd0, 0x53, 0x47,
-	0xfa, 0xdc, 0x81, 0x5f, 0x32, 0x5d, 0xed, 0x5d, 0xc2, 0x11, 0x17, 0xa6, 0xab, 0xbc, 0x17, 0xc6,
-	0xdf, 0xe0, 0x75, 0xf0, 0xc8, 0xfd, 0x33, 0x40, 0x5b, 0x2d, 0x09, 0xb2, 0x5c, 0x77, 0xc4, 0x97,
-	0x10, 0x48, 0x56, 0x70, 0xd9, 0x10, 0x2f, 0x42, 0xc9, 0x34, 0xdf, 0xa1, 0x18, 0xe0, 0x64, 0xa9,
-	0x85, 0xe1, 0x5a, 0xb0, 0xf8, 0x11, 0xbc, 0x77, 0xd1, 0x18, 0x9c, 0x82, 0x27, 0x45, 0x63, 0x88,
-	0x6b, 0xc3, 0x5d, 0x0f, 0x87, 0xb3, 0xb5, 0xe6, 0x56, 0xb8, 0xf8, 0x73, 0xe0, 0xcc, 0xe2, 0x8f,
-	0xfe, 0x8d, 0xf0, 0x13, 0xa0, 0x15, 0x37, 0xf8, 0x6a, 0x78, 0xf4, 0xeb, 0xed, 0x25, 0x3c, 0xb4,
-	0x15, 0xbf, 0xc2, 0x64, 0xc5, 0x8d, 0xcd, 0x72, 0x3b, 0x52, 0xcd, 0x2e, 0x73, 0x38, 0x52, 0x5d,
-	0x37, 0xfb, 0xec, 0xfd, 0xb8, 0x6d, 0x56, 0x04, 0xf6, 0x27, 0xdc, 0xff, 0x07, 0x00, 0x00, 0xff,
-	0xff, 0x97, 0x45, 0x50, 0x99, 0x44, 0x02, 0x00, 0x00,
+	// 412 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xbc, 0x93, 0x4d, 0xae, 0xd3, 0x30,
+	0x14, 0x85, 0x95, 0xd4, 0x75, 0xd3, 0xfb, 0x90, 0x88, 0xac, 0x27, 0x14, 0x02, 0x42, 0x55, 0x47,
+	0x65, 0x92, 0x92, 0x22, 0xc1, 0x08, 0xf1, 0x53, 0xd0, 0x13, 0x15, 0x23, 0x3f, 0x1e, 0x03, 0x66,
+	0x4e, 0x7c, 0x07, 0x46, 0x4e, 0x5d, 0x39, 0x6e, 0x36, 0xc2, 0x4a, 0xd8, 0x0e, 0x8b, 0x60, 0x0d,
+	0x28, 0x76, 0x3b, 0x40, 0x6a, 0xc2, 0x08, 0x66, 0xbe, 0xa7, 0xe7, 0x9e, 0x9e, 0x4f, 0x76, 0x20,
+	0xed, 0xca, 0x75, 0x8b, 0xb6, 0x53, 0x35, 0x16, 0x07, 0x6b, 0x9c, 0x61, 0xd7, 0xa6, 0x76, 0x46,
+	0x8b, 0xaa, 0x10, 0x07, 0x55, 0x38, 0x51, 0x69, 0x53, 0x74, 0x65, 0x7e, 0xbf, 0x2b, 0xd7, 0xb5,
+	0x69, 0x1a, 0xb3, 0x0f, 0x36, 0x2f, 0x74, 0xb8, 0x97, 0xc6, 0x06, 0x61, 0xf9, 0x2b, 0x82, 0xe9,
+	0xe7, 0xde, 0xce, 0x9e, 0x42, 0xac, 0x64, 0x16, 0x2d, 0xa2, 0xd5, 0xd5, 0xe6, 0x61, 0x71, 0x29,
+	0xae, 0xb8, 0xe3, 0x1f, 0x79, 0xac, 0x24, 0xbb, 0x86, 0xa9, 0x53, 0x4e, 0x63, 0x16, 0x2f, 0xa2,
+	0xd5, 0x9c, 0x87, 0xa1, 0x57, 0xb1, 0x31, 0xdf, 0x54, 0x36, 0x09, 0xaa, 0x1f, 0x18, 0x03, 0x22,
+	0xb1, 0xad, 0x33, 0xe2, 0x45, 0x7f, 0x66, 0x2f, 0x60, 0x56, 0x1b, 0x7d, 0x6c, 0xf6, 0x6d, 0x36,
+	0x5d, 0x4c, 0x56, 0x57, 0x9b, 0xc7, 0x97, 0xff, 0x6f, 0xeb, 0x4d, 0xfc, 0x6c, 0xee, 0xf7, 0x5a,
+	0x73, 0xb4, 0x35, 0xb6, 0x19, 0x1d, 0xdb, 0xbb, 0xf5, 0x26, 0x7e, 0x36, 0xef, 0x48, 0x32, 0x4b,
+	0x93, 0x1d, 0x49, 0x92, 0x74, 0xbe, 0xfc, 0x11, 0x01, 0x0d, 0xb9, 0xff, 0x93, 0xf8, 0x19, 0x4c,
+	0x6b, 0x61, 0xe5, 0x99, 0x37, 0x1f, 0xe0, 0x15, 0x56, 0xf2, 0x60, 0xdc, 0x91, 0x84, 0xa6, 0xb3,
+	0xd0, 0x7c, 0xf9, 0x3d, 0x02, 0xd2, 0xff, 0xf6, 0xaf, 0x1a, 0xa7, 0x30, 0x39, 0x5a, 0x7d, 0x2a,
+	0xdc, 0x1f, 0xd9, 0x03, 0xa0, 0x5a, 0x54, 0xa8, 0x43, 0xe1, 0x39, 0x3f, 0x4d, 0x7f, 0xb4, 0x02,
+	0x48, 0xb6, 0x56, 0x39, 0xb4, 0x4a, 0x2c, 0x5f, 0x02, 0xf9, 0xa4, 0x5a, 0xc7, 0xd6, 0x40, 0xb4,
+	0x6a, 0x5d, 0x16, 0x7b, 0xcc, 0x47, 0x97, 0x2b, 0xfa, 0xf7, 0xc6, 0xbd, 0x71, 0xf3, 0x33, 0x86,
+	0x7b, 0x7e, 0xbe, 0x0d, 0xcf, 0x99, 0xbd, 0x01, 0xba, 0xb5, 0x28, 0x1c, 0xb2, 0xb1, 0xed, 0x7c,
+	0x98, 0x9e, 0xbd, 0x82, 0xc9, 0x0d, 0x3a, 0x36, 0xec, 0xc8, 0xc7, 0x92, 0xd9, 0x07, 0x98, 0xdd,
+	0xa0, 0xf3, 0x34, 0x4f, 0x06, 0xae, 0xe9, 0x44, 0x9d, 0x0f, 0x5c, 0xa3, 0xdf, 0x7d, 0x0b, 0xf4,
+	0xee, 0x20, 0xff, 0xca, 0x31, 0x10, 0xf1, 0xc5, 0x28, 0xc9, 0x5e, 0x03, 0x7d, 0x8f, 0x1a, 0x1d,
+	0x8e, 0xb1, 0x8c, 0x04, 0xbc, 0x23, 0x5f, 0xe3, 0xae, 0xac, 0xa8, 0xff, 0xd2, 0x9f, 0xff, 0x0e,
+	0x00, 0x00, 0xff, 0xff, 0xb9, 0x70, 0xd3, 0xfd, 0x35, 0x04, 0x00, 0x00,
 }
