# internal/generated/api/v1/vendor.pb.go
@@ -5,9 +5,8 @@ package v1
 
 import (
 	fmt "fmt"
-	math "math"
-
 	proto "github.com/golang/protobuf/proto"
+	math "math"
 )
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -48,7 +47,9 @@ func (Provider) EnumDescriptor() ([]byte, []int) {
 
 type Secret struct {
 	Token                string   `protobuf:"bytes,1,opt,name=token,proto3" json:"token,omitempty"`
-	Provider             Provider `protobuf:"varint,2,opt,name=provider,proto3,enum=octolab.api.tablo.v1.Provider" json:"provider,omitempty"`
+	Name                 string   `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
+	Desc                 string   `protobuf:"bytes,3,opt,name=desc,proto3" json:"desc,omitempty"`
+	Provider             Provider `protobuf:"varint,4,opt,name=provider,proto3,enum=octolab.api.tablo.v1.Provider" json:"provider,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -86,6 +87,20 @@ func (m *Secret) GetToken() string {
 	return ""
 }
 
+func (m *Secret) GetName() string {
+	if m != nil {
+		return m.Name
+	}
+	return ""
+}
+
+func (m *Secret) GetDesc() string {
+	if m != nil {
+		return m.Desc
+	}
+	return ""
+}
+
 func (m *Secret) GetProvider() Provider {
 	if m != nil {
 		return m.Provider
@@ -94,9 +109,10 @@ func (m *Secret) GetProvider() Provider {
 }
 
 type Vendor struct {
-	Name                 string   `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
-	Desc                 string   `protobuf:"bytes,2,opt,name=desc,proto3" json:"desc,omitempty"`
-	Type                 Provider `protobuf:"varint,3,opt,name=type,proto3,enum=octolab.api.tablo.v1.Provider" json:"type,omitempty"`
+	Id                   *URI     `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Name                 string   `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
+	Desc                 string   `protobuf:"bytes,3,opt,name=desc,proto3" json:"desc,omitempty"`
+	Type                 Provider `protobuf:"varint,4,opt,name=type,proto3,enum=octolab.api.tablo.v1.Provider" json:"type,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -127,6 +143,13 @@ func (m *Vendor) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_Vendor proto.InternalMessageInfo
 
+func (m *Vendor) GetId() *URI {
+	if m != nil {
+		return m.Id
+	}
+	return nil
+}
+
 func (m *Vendor) GetName() string {
 	if m != nil {
 		return m.Name
@@ -148,38 +171,11 @@ func (m *Vendor) GetType() Provider {
 	return Provider_GITHUB
 }
 
-type Bucket struct {
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
-}
-
-func (m *Bucket) Reset()         { *m = Bucket{} }
-func (m *Bucket) String() string { return proto.CompactTextString(m) }
-func (*Bucket) ProtoMessage()    {}
-func (*Bucket) Descriptor() ([]byte, []int) {
-	return fileDescriptor_e6e7fc3250f020e9, []int{2}
-}
-
-func (m *Bucket) XXX_Unmarshal(b []byte) error {
-	return xxx_messageInfo_Bucket.Unmarshal(m, b)
-}
-func (m *Bucket) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
-	return xxx_messageInfo_Bucket.Marshal(b, m, deterministic)
-}
-func (m *Bucket) XXX_Merge(src proto.Message) {
-	xxx_messageInfo_Bucket.Merge(m, src)
-}
-func (m *Bucket) XXX_Size() int {
-	return xxx_messageInfo_Bucket.Size(m)
-}
-func (m *Bucket) XXX_DiscardUnknown() {
-	xxx_messageInfo_Bucket.DiscardUnknown(m)
-}
-
-var xxx_messageInfo_Bucket proto.InternalMessageInfo
-
 type Source struct {
+	Id                   *URI     `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Name                 string   `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
+	Desc                 string   `protobuf:"bytes,3,opt,name=desc,proto3" json:"desc,omitempty"`
+	Uri                  string   `protobuf:"bytes,4,opt,name=uri,proto3" json:"uri,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -189,7 +185,7 @@ func (m *Source) Reset()         { *m = Source{} }
 func (m *Source) String() string { return proto.CompactTextString(m) }
 func (*Source) ProtoMessage()    {}
 func (*Source) Descriptor() ([]byte, []int) {
-	return fileDescriptor_e6e7fc3250f020e9, []int{3}
+	return fileDescriptor_e6e7fc3250f020e9, []int{2}
 }
 
 func (m *Source) XXX_Unmarshal(b []byte) error {
@@ -210,34 +206,248 @@ func (m *Source) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_Source proto.InternalMessageInfo
 
+func (m *Source) GetId() *URI {
+	if m != nil {
+		return m.Id
+	}
+	return nil
+}
+
+func (m *Source) GetName() string {
+	if m != nil {
+		return m.Name
+	}
+	return ""
+}
+
+func (m *Source) GetDesc() string {
+	if m != nil {
+		return m.Desc
+	}
+	return ""
+}
+
+func (m *Source) GetUri() string {
+	if m != nil {
+		return m.Uri
+	}
+	return ""
+}
+
+type SourceList struct {
+	List                 []*Source `protobuf:"bytes,1,rep,name=list,proto3" json:"list,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}  `json:"-"`
+	XXX_unrecognized     []byte    `json:"-"`
+	XXX_sizecache        int32     `json:"-"`
+}
+
+func (m *SourceList) Reset()         { *m = SourceList{} }
+func (m *SourceList) String() string { return proto.CompactTextString(m) }
+func (*SourceList) ProtoMessage()    {}
+func (*SourceList) Descriptor() ([]byte, []int) {
+	return fileDescriptor_e6e7fc3250f020e9, []int{3}
+}
+
+func (m *SourceList) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_SourceList.Unmarshal(m, b)
+}
+func (m *SourceList) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_SourceList.Marshal(b, m, deterministic)
+}
+func (m *SourceList) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_SourceList.Merge(m, src)
+}
+func (m *SourceList) XXX_Size() int {
+	return xxx_messageInfo_SourceList.Size(m)
+}
+func (m *SourceList) XXX_DiscardUnknown() {
+	xxx_messageInfo_SourceList.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_SourceList proto.InternalMessageInfo
+
+func (m *SourceList) GetList() []*Source {
+	if m != nil {
+		return m.List
+	}
+	return nil
+}
+
+type SourceNode struct {
+	Meta *SourceNode_Meta `protobuf:"bytes,1,opt,name=meta,proto3" json:"meta,omitempty"`
+	// Types that are valid to be assigned to Data:
+	//	*SourceNode_Child
+	//	*SourceNode_Leaves
+	Data                 isSourceNode_Data `protobuf_oneof:"data"`
+	XXX_NoUnkeyedLiteral struct{}          `json:"-"`
+	XXX_unrecognized     []byte            `json:"-"`
+	XXX_sizecache        int32             `json:"-"`
+}
+
+func (m *SourceNode) Reset()         { *m = SourceNode{} }
+func (m *SourceNode) String() string { return proto.CompactTextString(m) }
+func (*SourceNode) ProtoMessage()    {}
+func (*SourceNode) Descriptor() ([]byte, []int) {
+	return fileDescriptor_e6e7fc3250f020e9, []int{4}
+}
+
+func (m *SourceNode) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_SourceNode.Unmarshal(m, b)
+}
+func (m *SourceNode) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_SourceNode.Marshal(b, m, deterministic)
+}
+func (m *SourceNode) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_SourceNode.Merge(m, src)
+}
+func (m *SourceNode) XXX_Size() int {
+	return xxx_messageInfo_SourceNode.Size(m)
+}
+func (m *SourceNode) XXX_DiscardUnknown() {
+	xxx_messageInfo_SourceNode.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_SourceNode proto.InternalMessageInfo
+
+func (m *SourceNode) GetMeta() *SourceNode_Meta {
+	if m != nil {
+		return m.Meta
+	}
+	return nil
+}
+
+type isSourceNode_Data interface {
+	isSourceNode_Data()
+}
+
+type SourceNode_Child struct {
+	Child *SourceNode `protobuf:"bytes,2,opt,name=child,proto3,oneof"`
+}
+
+type SourceNode_Leaves struct {
+	Leaves *SourceList `protobuf:"bytes,3,opt,name=leaves,proto3,oneof"`
+}
+
+func (*SourceNode_Child) isSourceNode_Data() {}
+
+func (*SourceNode_Leaves) isSourceNode_Data() {}
+
+func (m *SourceNode) GetData() isSourceNode_Data {
+	if m != nil {
+		return m.Data
+	}
+	return nil
+}
+
+func (m *SourceNode) GetChild() *SourceNode {
+	if x, ok := m.GetData().(*SourceNode_Child); ok {
+		return x.Child
+	}
+	return nil
+}
+
+func (m *SourceNode) GetLeaves() *SourceList {
+	if x, ok := m.GetData().(*SourceNode_Leaves); ok {
+		return x.Leaves
+	}
+	return nil
+}
+
+// XXX_OneofWrappers is for the internal use of the proto package.
+func (*SourceNode) XXX_OneofWrappers() []interface{} {
+	return []interface{}{
+		(*SourceNode_Child)(nil),
+		(*SourceNode_Leaves)(nil),
+	}
+}
+
+type SourceNode_Meta struct {
+	Name                 string   `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	Desc                 string   `protobuf:"bytes,2,opt,name=desc,proto3" json:"desc,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *SourceNode_Meta) Reset()         { *m = SourceNode_Meta{} }
+func (m *SourceNode_Meta) String() string { return proto.CompactTextString(m) }
+func (*SourceNode_Meta) ProtoMessage()    {}
+func (*SourceNode_Meta) Descriptor() ([]byte, []int) {
+	return fileDescriptor_e6e7fc3250f020e9, []int{4, 0}
+}
+
+func (m *SourceNode_Meta) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_SourceNode_Meta.Unmarshal(m, b)
+}
+func (m *SourceNode_Meta) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_SourceNode_Meta.Marshal(b, m, deterministic)
+}
+func (m *SourceNode_Meta) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_SourceNode_Meta.Merge(m, src)
+}
+func (m *SourceNode_Meta) XXX_Size() int {
+	return xxx_messageInfo_SourceNode_Meta.Size(m)
+}
+func (m *SourceNode_Meta) XXX_DiscardUnknown() {
+	xxx_messageInfo_SourceNode_Meta.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_SourceNode_Meta proto.InternalMessageInfo
+
+func (m *SourceNode_Meta) GetName() string {
+	if m != nil {
+		return m.Name
+	}
+	return ""
+}
+
+func (m *SourceNode_Meta) GetDesc() string {
+	if m != nil {
+		return m.Desc
+	}
+	return ""
+}
+
 func init() {
 	proto.RegisterEnum("octolab.api.tablo.v1.Provider", Provider_name, Provider_value)
 	proto.RegisterType((*Secret)(nil), "octolab.api.tablo.v1.Secret")
 	proto.RegisterType((*Vendor)(nil), "octolab.api.tablo.v1.Vendor")
-	proto.RegisterType((*Bucket)(nil), "octolab.api.tablo.v1.Bucket")
 	proto.RegisterType((*Source)(nil), "octolab.api.tablo.v1.Source")
+	proto.RegisterType((*SourceList)(nil), "octolab.api.tablo.v1.SourceList")
+	proto.RegisterType((*SourceNode)(nil), "octolab.api.tablo.v1.SourceNode")
+	proto.RegisterType((*SourceNode_Meta)(nil), "octolab.api.tablo.v1.SourceNode.Meta")
 }
 
 func init() { proto.RegisterFile("v1/vendor.proto", fileDescriptor_e6e7fc3250f020e9) }
 
 var fileDescriptor_e6e7fc3250f020e9 = []byte{
-	// 286 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x91, 0xc1, 0x4b, 0xfb, 0x30,
-	0x14, 0xc7, 0x7f, 0xdd, 0x6f, 0xd6, 0xed, 0x81, 0x3a, 0xc2, 0x0e, 0xb3, 0x88, 0x8c, 0x9e, 0x86,
-	0x87, 0x48, 0xeb, 0xcd, 0x63, 0xb7, 0xa1, 0x83, 0x81, 0xd2, 0x6e, 0x1e, 0x76, 0x6b, 0xd3, 0x77,
-	0x28, 0x5b, 0xf3, 0x4a, 0x96, 0x05, 0xfc, 0x5b, 0xfc, 0x67, 0xa5, 0x69, 0xf5, 0xd4, 0x81, 0xb7,
-	0x6f, 0x92, 0x0f, 0x9f, 0xf7, 0x4d, 0x02, 0x37, 0x26, 0x78, 0x34, 0x28, 0x73, 0x52, 0xbc, 0x52,
-	0xa4, 0x89, 0x8d, 0x49, 0x68, 0x3a, 0xa4, 0x19, 0x4f, 0xab, 0x82, 0xeb, 0x34, 0x3b, 0x10, 0x37,
-	0x81, 0x57, 0x63, 0x82, 0xca, 0x92, 0x64, 0x83, 0xf9, 0x3b, 0x70, 0x13, 0x14, 0x0a, 0x35, 0x1b,
-	0xc3, 0x85, 0xa6, 0x3d, 0xca, 0x89, 0x33, 0x75, 0x66, 0xc3, 0xb8, 0x59, 0xb0, 0x67, 0x18, 0x54,
-	0x8a, 0x4c, 0x91, 0xa3, 0x9a, 0xf4, 0xa6, 0xce, 0xec, 0x3a, 0xbc, 0xe7, 0x5d, 0x66, 0xfe, 0xde,
-	0x52, 0xf1, 0x2f, 0xef, 0xe7, 0xe0, 0x7e, 0xd8, 0x4a, 0x8c, 0x41, 0x5f, 0xa6, 0x25, 0xb6, 0x6a,
-	0x9b, 0xeb, 0xbd, 0x1c, 0x8f, 0xc2, 0x5a, 0x87, 0xb1, 0xcd, 0x2c, 0x84, 0xbe, 0xfe, 0xac, 0x70,
-	0xf2, 0xff, 0x4f, 0x93, 0x2c, 0xeb, 0x0f, 0xc0, 0x8d, 0x4e, 0x62, 0x8f, 0xba, 0x4e, 0x09, 0x9d,
-	0x94, 0xc0, 0x07, 0x1f, 0x06, 0x3f, 0x14, 0x03, 0x70, 0x5f, 0x56, 0x9b, 0xd7, 0x6d, 0x34, 0xfa,
-	0x57, 0xe7, 0x4d, 0xbc, 0x5c, 0xaf, 0xdf, 0x46, 0x4e, 0xf8, 0xe5, 0xc0, 0x55, 0x53, 0x2f, 0x41,
-	0x65, 0x0a, 0x81, 0x6c, 0x09, 0x97, 0x73, 0x92, 0x12, 0x85, 0x66, 0x77, 0xdd, 0xa3, 0x9b, 0xa7,
-	0xf2, 0xce, 0x9c, 0xb6, 0x97, 0x9d, 0x03, 0x2c, 0x8a, 0xa3, 0x68, 0x4d, 0xb7, 0xdd, 0xec, 0x76,
-	0xb5, 0xf0, 0xbc, 0x33, 0x1a, 0x2a, 0xf2, 0xa8, 0xbf, 0xeb, 0x99, 0x20, 0x73, 0xed, 0x27, 0x3d,
-	0x7d, 0x07, 0x00, 0x00, 0xff, 0xff, 0x53, 0xf5, 0xc3, 0xbf, 0xde, 0x01, 0x00, 0x00,
+	// 441 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xb4, 0x53, 0xcf, 0x6f, 0xd3, 0x30,
+	0x14, 0xae, 0xd3, 0x2c, 0xdb, 0x5e, 0x05, 0x54, 0xd6, 0x0e, 0x21, 0x42, 0xa8, 0x8a, 0x84, 0x54,
+	0x38, 0x04, 0x1a, 0x2e, 0xb0, 0x03, 0x87, 0x8e, 0x41, 0x27, 0x95, 0x1f, 0x72, 0x37, 0x0e, 0xdc,
+	0x5c, 0xfb, 0x49, 0x58, 0x24, 0x71, 0x95, 0x78, 0x91, 0xb8, 0xf2, 0x0f, 0xf0, 0x47, 0xf2, 0x37,
+	0x70, 0x47, 0xb6, 0xb3, 0x71, 0x69, 0xd6, 0x5e, 0xb8, 0xbd, 0xbc, 0x7c, 0xdf, 0xe7, 0xef, 0x7d,
+	0x7e, 0x86, 0x07, 0xed, 0xec, 0x79, 0x8b, 0x95, 0xd4, 0x75, 0xb6, 0xa9, 0xb5, 0xd1, 0xf4, 0x44,
+	0x0b, 0xa3, 0x0b, 0xbe, 0xce, 0xf8, 0x46, 0x65, 0x86, 0xaf, 0x0b, 0x9d, 0xb5, 0xb3, 0xc4, 0xc2,
+	0x84, 0x2e, 0x4b, 0x5d, 0x79, 0x58, 0xfa, 0x93, 0x40, 0xb4, 0x42, 0x51, 0xa3, 0xa1, 0x27, 0x70,
+	0x60, 0xf4, 0x77, 0xac, 0x62, 0x32, 0x21, 0xd3, 0x63, 0xe6, 0x3f, 0x28, 0x85, 0xb0, 0xe2, 0x25,
+	0xc6, 0x81, 0x6b, 0xba, 0xda, 0xf6, 0x24, 0x36, 0x22, 0x1e, 0xfa, 0x9e, 0xad, 0xe9, 0x29, 0x1c,
+	0x6d, 0x6a, 0xdd, 0x2a, 0x89, 0x75, 0x1c, 0x4e, 0xc8, 0xf4, 0x7e, 0xfe, 0x38, 0xdb, 0x66, 0x21,
+	0xfb, 0xdc, 0xa1, 0xd8, 0x2d, 0x3e, 0xfd, 0x45, 0x20, 0xfa, 0xe2, 0xcc, 0xd3, 0xa7, 0x10, 0x28,
+	0xe9, 0x1c, 0x8c, 0xf2, 0x87, 0xdb, 0x05, 0xae, 0xd8, 0x05, 0x0b, 0x94, 0xdc, 0xdb, 0x59, 0x0e,
+	0xa1, 0xf9, 0xb1, 0xc1, 0x3d, 0x5d, 0x39, 0x6c, 0x5a, 0x42, 0xb4, 0xd2, 0xd7, 0xb5, 0xc0, 0xff,
+	0x61, 0x68, 0x0c, 0xc3, 0xeb, 0x5a, 0x39, 0x3f, 0xc7, 0xcc, 0x96, 0xe9, 0x1b, 0x00, 0x7f, 0xdc,
+	0x52, 0x35, 0x86, 0xbe, 0x80, 0xb0, 0x50, 0x8d, 0x89, 0xc9, 0x64, 0x38, 0x1d, 0xe5, 0x8f, 0xb6,
+	0x1f, 0xea, 0xf1, 0xcc, 0x21, 0xd3, 0x3f, 0xe4, 0x46, 0xe0, 0xa3, 0x96, 0x48, 0x5f, 0x43, 0x58,
+	0xa2, 0xe1, 0x9d, 0xeb, 0x27, 0x77, 0x09, 0x58, 0x7c, 0xf6, 0x01, 0x0d, 0x67, 0x8e, 0x42, 0x5f,
+	0xc1, 0x81, 0xf8, 0xa6, 0x0a, 0xe9, 0x86, 0x18, 0xe5, 0x93, 0x5d, 0xdc, 0xc5, 0x80, 0x79, 0x02,
+	0x3d, 0x85, 0xa8, 0x40, 0xde, 0x62, 0xe3, 0x66, 0xdd, 0x41, 0xb5, 0x73, 0x2e, 0x06, 0xac, 0x63,
+	0x24, 0x19, 0x84, 0xd6, 0xc3, 0x6d, 0x82, 0x64, 0x4b, 0x82, 0xc1, 0xbf, 0x04, 0xe7, 0x11, 0x84,
+	0x92, 0x1b, 0xfe, 0x2c, 0x85, 0xa3, 0x9b, 0x8b, 0xa3, 0x00, 0xd1, 0xfb, 0x8b, 0xcb, 0xc5, 0xd5,
+	0x7c, 0x3c, 0xb0, 0xf5, 0x25, 0x3b, 0x5f, 0x2e, 0x3f, 0x8d, 0x49, 0xfe, 0x9b, 0xc0, 0x3d, 0xbf,
+	0x5c, 0x2b, 0xac, 0x5b, 0x25, 0x90, 0x9e, 0xc3, 0xe1, 0x99, 0xae, 0x2a, 0x14, 0x86, 0xf6, 0x85,
+	0xeb, 0x5e, 0x44, 0xd2, 0xf3, 0xb7, 0x5b, 0xd5, 0x33, 0x80, 0xb7, 0xaa, 0x11, 0x9d, 0x52, 0xff,
+	0x6e, 0x24, 0x49, 0x8f, 0x8c, 0x56, 0x92, 0xbe, 0x83, 0x43, 0x9f, 0x48, 0x73, 0x97, 0xc2, 0xce,
+	0x6b, 0x98, 0x87, 0x5f, 0x83, 0x76, 0xb6, 0x8e, 0xdc, 0xa3, 0x7e, 0xf9, 0x37, 0x00, 0x00, 0xff,
+	0xff, 0x52, 0x88, 0x53, 0x3c, 0x0e, 0x04, 0x00, 0x00,
 }
